@@ -1,3 +1,9 @@
+2023-06-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php,
+	  previous.php:
+	  Announce SDCC 4.3.0 RC1.
+
 2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* images/sdcc.svg,
